<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogMode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_marginBottom="0dp"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical"
    android:paddingBottom="0dp">

    <LinearLayout
        android:id="@+id/llLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/viewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_noonpayment_logo" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cardBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLogo"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp">

        <LinearLayout
            android:id="@+id/llbackarrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/viewArrowBack"
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/txtBack"
                style="@style/TopHeading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:gravity="center"
                android:text="@string/back_saved" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/cardEntryBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llbackarrow"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_box">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txtAddNewCard"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add_card" />

                <TextView
                    android:id="@+id/txtCardNumber"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="ltr">

                    <EditText
                        android:id="@+id/edtCardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/roundtextbox"
                        android:digits="0123456789 "
                        android:fontFamily="@font/proxima_nova"
                        android:hint="@string/number_validate"
                        android:inputType="number"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        android:singleLine="true"
                        android:textColor="#404553"
                        android:textDirection="ltr"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/viewCard"
                        android:layout_width="30dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/transparent"
                        android:layoutDirection="ltr"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_genericcard" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtCardError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_card_number"
                    android:textColor="@color/Red"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/llExp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/txtExpiry"
                            style="@style/Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/expiry" />

                        <EditText
                            android:id="@+id/edtExpiry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/roundtextbox"
                            android:digits="0123456789/"
                            android:fontFamily="@font/proxima_nova"
                            android:hint="@string/mmyy"
                            android:inputType="number"
                            android:maxLength="5"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textColor="#404553"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtExpiryError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_expiry_date"
                            android:textColor="@color/Red"
                            android:textSize="12dp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCVV"
                            style="@style/Label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/cvv" />

                        <EditText
                            android:id="@+id/edtCVV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttonshapeaddcard"
                            android:fontFamily="@font/proxima_nova"
                            android:hint="@string/cvv"
                            android:inputType="numberPassword"
                            android:maxLength="4"
                            android:paddingStart="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:textColor="#404553"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtCVVError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_enter_cvv"
                            android:textColor="@color/Red"
                            android:textSize="12dp"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>


                <TextView
                    android:id="@+id/txtCardName"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_on_card" />

                <EditText
                    android:id="@+id/edtCardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshapeaddcard"
                    android:fontFamily="@font/proxima_nova"
                    android:hint="@string/name_validate"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLength="100"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textColor="#404553"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCardNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_on_card"
                    android:textColor="@color/Red"
                    android:textSize="12dp"
                    android:visibility="gone" />


                <CheckBox
                    android:id="@+id/saveCardcb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="Save Card"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/paymentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardEntryBox"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/PayableBox"
            android:paddingTop="18dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/txtPay"
                style="@style/LabelFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:text="@string/payable_amount"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/txtAmount"
                style="@style/LabelFooterBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="SAD 0.00"
                android:textAlignment="textEnd" />

            <RelativeLayout
                android:id="@+id/paynowBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPay"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@color/PaynowBox"
                android:paddingTop="14dp"
                android:paddingBottom="14dp">

                <TextView
                    android:id="@+id/txtPayNow"
                    style="@style/LabelPayNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pay_now"
                    android:textAlignment="center" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_x_close" />

    </LinearLayout>

</RelativeLayout>

