<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogMode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical"
    android:paddingBottom="0dp">

    <LinearLayout
        android:id="@+id/llLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/viewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_noonpayment_logo" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cardListBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLogo"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/viewArrowBack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/txtBack"
                style="@style/TopHeading"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/back_payment" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/listBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_box">

            <TextView
                android:id="@+id/txtSelectCard"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_cards" />

            <!-- card list view -->
            <LinearLayout
                android:id="@+id/llList"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_below="@+id/txtSelectCard"
                android:layout_marginTop="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/llListContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"></LinearLayout>

                </ScrollView>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btnNewCard"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listBox"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/buttonshapeaddcard"
            android:fontFamily="@font/proxima_nova"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/add_card"
            android:textColor="@color/DimGray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/paymentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnNewCard"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="0dp"
            android:background="@color/PayableBox"
            android:paddingTop="18dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/txtPay"
                style="@style/LabelFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:text="@string/payable_amount"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/txtAmount"
                style="@style/LabelFooterBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="SAD 0.00"
                android:textAlignment="textEnd" />

            <RelativeLayout
                android:id="@+id/paynowBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPay"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@color/PaynowBox"
                android:paddingTop="14dp"
                android:paddingBottom="14dp">

                <TextView
                    android:id="@+id/txtPayNow"
                    style="@style/LabelPayNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pay_now"
                    android:textAlignment="center" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_x_close" />

    </LinearLayout>

</RelativeLayout>