<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/dialogMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <LinearLayout
            android:id="@+id/llLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="22dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/viewLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_noonpayment_logo" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llLogo"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp">

            <TextView
                android:id="@+id/txtSelect"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/payment_method"
                android:textAlignment="textEnd" />

            <RelativeLayout
                android:id="@+id/ccBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtSelect"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_box">

                <ImageView
                    android:id="@+id/viewmeeza"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/ic_visa"
                    android:visibility="gone" />


                <ImageView
                    android:id="@+id/viewVisa"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/viewmeeza"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/ic_visa" />

                <ImageView
                    android:id="@+id/viewMC"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@+id/viewVisa"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/ic_mastercard" />

                <ImageView
                    android:id="@+id/viewAMEX"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_toEndOf="@+id/viewMC"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:src="@drawable/ic_americanexpress" />

                <TextView
                    android:id="@+id/txtCard"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/viewArrow"
                    android:clickable="false"
                    android:fontFamily="@font/proxima_nova"
                    android:gravity="center_vertical|end"
                    android:text="@string/card"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/viewArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_arrow_forward" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/paymentBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ccBox"
                android:layout_marginStart="20dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="20dp"
                android:background="@color/PinkBox"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/txtPay"
                    style="@style/LabelFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/pay_now"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/txtAmount"
                    style="@style/LabelFooterBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:text="SAD 1,200.00"
                    android:textAlignment="textEnd" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/secureBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/paymentBox"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/txtPaySecure"
                    style="@style/LabelSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/your_payments_are_processed_securely"
                    android:textAlignment="center" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_x_close" />

        </LinearLayout>

    </RelativeLayout>
</layout>